fix css and indicate shift error

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -15,3 +15,8 @@ body {
 input:focus {
   border-color: #eb2930;
 }
+
+/* html,
+body {
+  overflow-y: scroll;
+} */
